--- a/Ted Talk/Ted Talk/View/Base.lproj/LaunchScreen.storyboard
+++ b/Ted Talk/Ted Talk/View/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TED.png" translatesAutoresizingMaskIntoConstraints="NO" id="Bup-Kc-Dfe">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="0.76256893495271305" blue="0.8476421199096893" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Bup-Kc-Dfe" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" id="RCS-4v-jMe"/>
+                            <constraint firstItem="Bup-Kc-Dfe" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="qcp-ns-p1r"/>
+                            <constraint firstItem="Bup-Kc-Dfe" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="vas-v3-r5c"/>
+                            <constraint firstItem="Bup-Kc-Dfe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yBS-5A-WYj"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,8 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="TED.png" width="512" height="512"/>
     </resources>
 </document>
