--- a/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
+++ b/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YoA-Ed-OJs" userLabel="PlayListInformation">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="156"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TED.png" translatesAutoresizingMaskIntoConstraints="NO" id="jHj-wB-eku">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TED" translatesAutoresizingMaskIntoConstraints="NO" id="jHj-wB-eku">
                                                             <rect key="frame" x="5" y="15" width="165.5" height="126"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="jHj-wB-eku" secondAttribute="height" multiplier="4:3" id="Pkr-5c-vSy"/>
@@ -109,7 +109,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="TED.png" width="512" height="512"/>
+        <image name="TED" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
