--- a/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
+++ b/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rnX-eG-pqy">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Welcome-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Ted_Talk" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="IbG-Iu-Wnl">
-                                <rect key="frame" x="197" y="443" width="20" height="20"/>
+                                <rect key="frame" x="197" y="465" width="20" height="20"/>
                             </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tCg-Or-XUd" userLabel="PlayList">
-                                <rect key="frame" x="0.0" y="453" width="414" height="409"/>
+                                <rect key="frame" x="0.0" y="475" width="414" height="387"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tedTalksCell" rowHeight="156" id="2ml-rq-85G" customClass="PlayListCell" customModule="Ted_Talk" customModuleProvider="target">
@@ -78,6 +78,7 @@
                                         <connections>
                                             <outlet property="descrip" destination="wPF-ma-FXo" id="NKP-Pb-rTX"/>
                                             <outlet property="title" destination="rJw-Mm-yss" id="N40-mp-N9p"/>
+                                            <segue destination="3OL-sk-3gj" kind="show" identifier="showDetail" id="biM-di-UWE"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -87,7 +88,7 @@
                                 </connections>
                             </tableView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nzs-pf-zqj" userLabel="SearchBar">
-                                <rect key="frame" x="0.0" y="44" width="414" height="409"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="387"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" id="v5c-FL-etj">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -98,7 +99,7 @@
                                     </connections>
                                 </searchBar>
                                 <pickerView key="tableFooterView" contentMode="scaleToFill" id="sH5-Bx-5UA">
-                                    <rect key="frame" x="0.0" y="318" width="414" height="136"/>
+                                    <rect key="frame" x="0.0" y="342" width="414" height="136"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemGray2Color"/>
                                     <connections>
@@ -133,6 +134,9 @@
                             <constraint firstItem="nzs-pf-zqj" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="zT6-FS-4Yg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Welcome" id="iQF-f7-g05">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="OGJ-da-fRK"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="IbG-Iu-Wnl" id="yq8-De-eUX"/>
                         <outlet property="pickerView" destination="sH5-Bx-5UA" id="3kP-xu-tPh"/>
@@ -141,6 +145,120 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="939.13043478260875" y="69.642857142857139"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="YRn-bw-ZU7">
+            <objects>
+                <viewController id="3OL-sk-3gj" customClass="DetailViewController" customModule="Ted_Talk" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zCA-Ih-3Sb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TitleD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ScQ-hf-0w9">
+                                <rect key="frame" x="175" y="93" width="64" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-Po-wgK">
+                                <rect key="frame" x="20" y="287.5" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PublishedDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPr-SR-IKv">
+                                <rect key="frame" x="20" y="313.5" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gnb-vB-J5a">
+                                <rect key="frame" x="20" y="339.5" width="374" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WXf-Sv-Kdp">
+                                <rect key="frame" x="20" y="377" width="374" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GgQ-CK-Mow">
+                                <rect key="frame" x="20" y="831.5" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXE-OA-soZ">
+                                <rect key="frame" x="20" y="133" width="374" height="149.5"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vXE-OA-soZ" secondAttribute="height" multiplier="5:2" id="Sg9-NO-iUW"/>
+                                </constraints>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="R6s-kJ-1ay"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WXf-Sv-Kdp" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="5Ph-rv-lfq"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="Gnb-vB-J5a" secondAttribute="trailing" constant="20" id="6La-Au-OC9"/>
+                            <constraint firstItem="ScQ-hf-0w9" firstAttribute="centerX" secondItem="R6s-kJ-1ay" secondAttribute="centerX" id="70C-9K-HgD"/>
+                            <constraint firstItem="pgc-Po-wgK" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="72M-Ud-olZ"/>
+                            <constraint firstItem="GgQ-CK-Mow" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="C63-eq-Oea"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="pPr-SR-IKv" secondAttribute="trailing" constant="20" id="D2T-QZ-Mim"/>
+                            <constraint firstItem="WXf-Sv-Kdp" firstAttribute="top" secondItem="Gnb-vB-J5a" secondAttribute="bottom" constant="10" id="K22-nv-iYB"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="bottom" secondItem="GgQ-CK-Mow" secondAttribute="bottom" constant="10" id="NVZ-cg-qkw"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="vXE-OA-soZ" secondAttribute="trailing" constant="20" id="PdU-gF-h6l"/>
+                            <constraint firstItem="vXE-OA-soZ" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="R8J-PG-cd1"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="pgc-Po-wgK" secondAttribute="trailing" constant="20" id="bfE-Pi-fTc"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="WXf-Sv-Kdp" secondAttribute="trailing" constant="20" id="f4H-Ov-dUG"/>
+                            <constraint firstItem="R6s-kJ-1ay" firstAttribute="trailing" secondItem="GgQ-CK-Mow" secondAttribute="trailing" constant="20" id="hQN-rL-JXn"/>
+                            <constraint firstItem="vXE-OA-soZ" firstAttribute="top" secondItem="ScQ-hf-0w9" secondAttribute="bottom" constant="10" id="iW1-9o-YrC"/>
+                            <constraint firstItem="pPr-SR-IKv" firstAttribute="top" secondItem="pgc-Po-wgK" secondAttribute="bottom" constant="5" id="jzv-LD-gRa"/>
+                            <constraint firstItem="pPr-SR-IKv" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="pDU-Vs-jiy"/>
+                            <constraint firstItem="Gnb-vB-J5a" firstAttribute="top" secondItem="pPr-SR-IKv" secondAttribute="bottom" constant="5" id="pR8-zp-7vp"/>
+                            <constraint firstItem="Gnb-vB-J5a" firstAttribute="leading" secondItem="R6s-kJ-1ay" secondAttribute="leading" constant="20" id="pWx-f9-oFv"/>
+                            <constraint firstItem="ScQ-hf-0w9" firstAttribute="top" secondItem="R6s-kJ-1ay" secondAttribute="top" constant="5" id="qvt-bf-Yra"/>
+                            <constraint firstItem="pgc-Po-wgK" firstAttribute="top" secondItem="vXE-OA-soZ" secondAttribute="bottom" constant="5" id="uqc-tr-VF9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Detail" id="cwd-lq-Tzf"/>
+                    <connections>
+                        <outlet property="descriptiond" destination="WXf-Sv-Kdp" id="8qW-bf-pue"/>
+                        <outlet property="name" destination="Gnb-vB-J5a" id="3h1-zu-ZkT"/>
+                        <outlet property="publishedDate" destination="pPr-SR-IKv" id="Bss-M7-Kzi"/>
+                        <outlet property="tags" destination="GgQ-CK-Mow" id="WJ0-IN-a0s"/>
+                        <outlet property="titleD" destination="ScQ-hf-0w9" id="JhF-fB-In5"/>
+                        <outlet property="views" destination="pgc-Po-wgK" id="tBj-Qz-BtV"/>
+                        <outlet property="webView" destination="vXE-OA-soZ" id="VwP-o9-8in"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yY9-zB-qKv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1823.1884057971015" y="71.651785714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="e7S-TS-C6e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rnX-eG-pqy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D0p-dB-0vX">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="2Yh-Rv-7bm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uGt-nw-fDF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="69.642857142857139"/>
         </scene>
